feat: secured createTopic route
